# OWREstimator

./: .gitignore  Makefile  README.md  datascrapper.py  dataset.csv  dataset2.csv  gamelist.csv  gettingGameList.py  gettingTASTimes.py  pyproject.toml  requirements.txt  srcdata.py  tas_dataset.csv  test.py
.github/prompts/: bug-finder.md
data/: data.csv  dataset.csv  dataset2.csv  f_dataset.csv  final_dataset.csv  gamelist2.csv  sly.csv  tas_dataset.csv  tas_dataset2.csv
owrestimator/app/: back.py  main.py  ml.py  speedrun_com_gateway.py
owrestimator/flask/: api.py
owrestimator/flask/templates/: result.html
owrestimator/scraping/: gettingGameList.py  srcdata.py
owrestimator/training/: custom_encoder.py  train.py
src/: api.py  back.py  datascrapper.py  eda.ipynb  gettingGameList.py  gettingTASTimes.py  model_building.ipynb  model_pipeline.py  srcdata.py  test.csv  test.py  time_prediction.joblib
src/app/: back.py  main.py  time_prediction.joblib
src/templates/: category.html  home.html
tests/: test_dummy.py
tests/e2e/: test_predict.py  test_predict_tas_time.py
tests/integration/: test_predict_tas_time_from_wr.py  test_speedrun_com_gateway.py
tests/unit/: test_predict_tas_time.py
